bug fix api documentation
